--- a/src/app/contact/page.module.css
+++ b/src/app/contact/page.module.css
@@ -1,4 +1,8 @@
+/* Default styles for larger screens */
 .container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
 }
 
 .title {
@@ -9,8 +13,9 @@
 
 .content {
   display: flex;
+  flex-direction: column-reverse; /* Stack content vertically on smaller screens */
   align-items: center;
-  gap: 100px;
+  gap: 20px;
 }
 
 .imgContainer {
@@ -21,16 +26,6 @@
 
 .image {
   object-fit: contain;
-  /* animation: move 3s infinite ease alternate; */
-}
-
-@keyframes move {
-  from {
-    transform: translateY(-15px);
-  }
-  to {
-    transform: translateY(0px) scale(1.03);
-  }
 }
 
 .form {
@@ -50,4 +45,40 @@
   border: 3px solid #bbb;
   font-size: 20px;
   font-weight: bold;
+}
+
+/* Media query for screens smaller than 768px (e.g., mobile devices) */
+@media (max-width: 768px) {
+
+
+  .title {
+    font-size: 30px; /* Decrease font size for smaller screens */
+    margin-bottom: 30px; /* Reduce margin */
+    text-align: left;
+    margin-left: -29px;
+  }
+
+  .content {
+    gap: 10px; /* Reduce gap between elements */
+  }
+
+  .imgContainer {
+    display: none; /* Allow image to resize */
+  }
+
+  /* .image {
+    max-width: 100%; 
+    height: auto; 
+  } */
+
+  .form {
+     margin-right: 99px;
+     margin-left: -32px;
+  }
+
+  .input,
+  .textArea {
+    padding: 10px; /* Reduce padding */
+    font-size: 16px; /* Decrease font size */
+  }
 }
