--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,42 +1,51 @@
 .container {
   display: flex;
+  flex-direction: column; /* Stack items vertically on small screens */
   align-items: center;
-  gap: 100px;
+  gap: 20px; /* Reduce the gap between items on small screens */
 }
 
 .item {
   flex: 1;
   display: flex;
   flex-direction: column;
-  gap: 50px;
+  align-items: center; /* Center items horizontally on small screens */
+  text-align: center; /* Center text content */
+  gap: 20px; /* Reduce the gap between elements inside .item */
 }
 
 .title {
-  font-size: 72px;
+  font-size: 36px; /* Decrease font size for smaller screens */
   background: linear-gradient(to bottom, #194c33, #bbb);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
 .img {
-  width: 100%;
-  height: 500px;
-  object-fit: contain;
-  /* animation: move 3s infinite ease alternate; */
+  max-width: 100%; /* Ensure the image doesn't overflow its container */
+  height: auto; /* Maintain image aspect ratio */
 }
-
-@keyframes move {
-  from {
-    transform: translateY(-10px);
-  }
-  to {
-    transform: translateY(10px);
-  }
-}
-
 
 .desc {
-  font-size: 24px;
+  font-size: 18px; /* Decrease font size for smaller screens */
   font-weight: 300;
 }
 
+/* Add a media query for screens with a maximum width of 768px (typical for mobile devices) */
+@media screen and (max-width: 768px) {
+  .container {
+    gap: 10px; /* Further reduce the gap between items */
+  }
+
+  .item {
+    gap: 10px; /* Further reduce the gap between elements inside .item */
+  }
+
+  .title {
+    font-size: 24px; /* Adjust font size for small screens */
+  }
+
+  .desc {
+    font-size: 16px; /* Adjust font size for small screens */
+  }
+}
