--- a/src/app/portfolio/page.module.css
+++ b/src/app/portfolio/page.module.css
@@ -44,3 +44,32 @@
 .item:hover .title {
   color: #53c28b;
 }
+
+@media (max-width: 768px) {
+  .mainTitle {
+    font-size: 40px;
+    text-align: center;
+  }
+
+  .selectTitle {
+    text-align: center;
+    font-size: 20px;
+  }
+  
+  .items {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    margin-left: -28px;
+  }
+  
+  .item {
+    border: 5px solid #bbb;
+    border-radius: 5px;
+    width: 300px;
+    height: 400px;
+    position: relative;
+    background-size: cover !important;
+  }
+  
+}
